Add Methods to retrieve Transactions for a Ledger Account Refresh Ledger details in Cache Helper to get LedgerAccount from id Helper to format Date Generate SQL Script for backup View Transaction for Ledger Common Footer for Ledger
Add Methods to retrieve Transactions for a Ledger Account
Refresh Ledger details in Cache
Helper to get LedgerAccount from id
Helper to format Date
Generate SQL Script for backup
View Transaction for Ledger
Common Footer for Ledger

--- a/Accounting.UI/Views/LedgerAccount/Edit.cshtml
+++ b/Accounting.UI/Views/LedgerAccount/Edit.cshtml
@@ -50,4 +50,7 @@
             </div>
         </div>
     }
+    <div class="panel-footer text-center">
+        @Html.Partial("FooterLedger")
+    </div>
 </div>
