--- a/Accounting.UI/Views/LedgerHead/Edit.cshtml
+++ b/Accounting.UI/Views/LedgerHead/Edit.cshtml
@@ -49,4 +49,7 @@
             </div>
         </div>
     }
+    <div class="panel-footer text-center">
+        @Html.Partial("FooterLedger")
+    </div>
 </div>
