--- a/Accounting.UI/Views/LedgerType/Index.cshtml
+++ b/Accounting.UI/Views/LedgerType/Index.cshtml
@@ -26,4 +26,7 @@
     <div class="panel-footer text-right">
         @Html.ActionLink("New Ledger Type", "Create", null, new { @class = "btn btn-sm btn-primary " })
     </div>
+    <div class="panel-footer text-center">
+        @Html.Partial("FooterLedger")
+    </div>
 </div>
