--- a/Accounting.UI/Content/Site.css
+++ b/Accounting.UI/Content/Site.css
@@ -18,10 +18,10 @@
 
 /* Set width on the form input elements since they're 100% wide by default */
 input,
-select,
-textarea {
+select {
     max-width: 280px;
 }
+
 .credit_debit_Debit .credit_debit_text {
-    float:right;
+    float: right;
 }
