--- a/Accounting.UI/Views/LedgerAccount/Index.cshtml
+++ b/Accounting.UI/Views/LedgerAccount/Index.cshtml
@@ -20,7 +20,7 @@
             {
                 <tr>
                     <td>@item.ParentLedgerHead().LedgerHeadName</td>
-                    <td>@item.LedgerAccountName</td>
+                    <td> @Html.ActionLink(item.LedgerAccountName, "List","Transaction", new { item.LedgerAccountId }, null)</td>
                     <td class="text-right">@item.OpeningBalance.ToString("C")</td>
                     <td class="text-right"><span class="fa fa-toggle@(item.AffectsInventory ? "-on" : "-off")"></span></td>
                 </tr>
@@ -29,5 +29,8 @@
     </div>
     <div class="panel-footer text-right">
         @Html.ActionLink("New Ledger Account", "Create", null, new { @class = "btn btn-sm btn-primary " })
+    </div>
+    <div class="panel-footer text-center">
+        @Html.Partial("FooterLedger")
     </div>
 </div>
