--- a/Accounting.UI/Views/LedgerHead/Index.cshtml
+++ b/Accounting.UI/Views/LedgerHead/Index.cshtml
@@ -30,4 +30,7 @@
     <div class="panel-footer text-right">
         @Html.ActionLink("New Ledger Head", "Create", null, new { @class = "btn btn-sm btn-primary " })
     </div>
+    <div class="panel-footer text-center">
+        @Html.Partial("FooterLedger")
+    </div>
 </div>
