--- a/Accounting.UI/Views/LedgerType/Edit.cshtml
+++ b/Accounting.UI/Views/LedgerType/Edit.cshtml
@@ -42,4 +42,7 @@
             @Html.ActionLink("Cancel", "Index", null, new { @class = "btn btn-sm btn-default" })
         </div>
     }
+    <div class="panel-footer text-center">
+        @Html.Partial("FooterLedger")
+    </div>
 </div>
