--- a/Accounting.UI/Content/Site.css
+++ b/Accounting.UI/Content/Site.css
@@ -22,6 +22,6 @@ select {
     max-width: 280px;
 }
 
-.credit_debit_Debit .credit_debit_text {
+.credit_debit_Credit .credit_debit_text {
     float: right;
 }
